--- a/index.css
+++ b/index.css
@@ -6,43 +6,50 @@
 
 #number-block {
   display: inline-block;
-  margin-left: 35vw;
+  margin-left: 36vw;
   margin-top: 20vh;
-  width: 30vw;
+  width: 28vw;
   height: 60vh;
   background-color: #E9E8EB;
   border-style: solid;
   border-width: 4px;
+  display: inline-block;
 }
 
-
 .circle {
-  width: 13vw;
-  height: 13vw;
+  width: 15vh;
+  height: 15vh;
   border-radius: 50%;
   font-size: 5vw;
   color: #fff;
   line-height: 100px;
   text-align: center;
   background: red;
-  display: inline-block;
-  margin: auto;
+  display: table;
+  margin: 0 auto;
   border-style: solid;
   border-width: 4px;
   border-color: black;
   background-color: #5D567E;
-  margin-left: 8vw;
-  margin-top: 4vh;
+  margin-top: 10vh;
 }
 
 .input-textbox {
   border-style: solid;
   border-width: 4px;
   border-color: black;
-  margin-top: 3vh;
-  margin-left: 5vw;
   width: 20vw;
   height: 5vh;
   font-size: 3vh;
   text-align: center;
+  display: table;
+  margin: 0 auto;
+  margin-top: 10vh;
+}
+
+#correct-answer-hint {
+
+  display: table;
+  margin: 0 auto;
+  margin-top: 2vh;
 }
